# GUIBaseCpp

./: .gitignore  CMakeLists.txt  README  imgui.ini
include/: custom_elements.hpp  formatted_elements.hpp
src/: main.cpp
